# i2ros_autonomous-driving

./: README  README.md  README.txt  frames.gv
.catkin_tools/profiles/default/: devel_collisions.txt
AutonomousDriving/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
AutonomousDriving/logs/controller_pkg/: build.make.130.log.stderr
AutonomousDriving/logs/map/: build.make.056.log.stderr  build.make.058.log.stderr
AutonomousDriving/logs/simulation/: build.make.000.log.stderr  build.make.126.log.stderr
AutonomousDriving/logs/state_machine/: build.check.003.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr  build.check.006.log.stderr
AutonomousDriving/logs/waypoint_follower/: build.make.000.log.stderr
AutonomousDriving/logs/waypoint_publisher/: build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.008.log.stderr
AutonomousDriving/logs/waypoints_publisher/: build.make.002.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.008.log.stderr
AutonomousDriving/src/map_expander/: CMakeLists.txt
AutonomousDriving/src/map_expander/scripts/: map_expander_node.py
AutonomousDriving/src/state_machine/: CMakeLists.txt
AutonomousDriving/src/traffic_light_detector_pkg/: package.xml
AutonomousDriving/src/waypoints_publisher/: CMakeLists.txt
AutonomousDriving/src/waypoints_publisher/config/: waypoints.yaml  waypoints_test.yaml
AutonomousDriving/src/waypoints_publisher/launch/: waypoints_publisher.launch
catkin_ws/: README.md
catkin_ws/devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
catkin_ws/logs/simulation/: build.make.000.log.stderr
catkin_ws/logs/trajectory_publisher/: build.check.000.log.stderr  build.cmake.000.log.stderr
catkin_ws/src/state_machine/: CMakeLists.txt
catkin_ws/src/trajectory_publisher/: CMakeLists.txt
controller_pkg/config/: controller_params.yaml
controller_pkg/src/: controller_node.cpp
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
logs/controller_pkg/: build.symlink.004.log.stderr
logs/fla_msgs/: build.symlink.005.log.stderr
logs/fla_utils/: build.symlink.010.log.stderr
logs/map/: build.check.001.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr
logs/mav_msgs/: build.symlink.028.log.stderr
logs/mav_system_msgs/: build.symlink.011.log.stderr
logs/nav_msgs/: build.symlink.009.log.stderr
logs/simulation/: build.make.000.log.stderr  build.make.004.log.stderr  build.symlink.005.log.stderr
logs/traffic_light_detector_pkg/: build.check.022.log.stderr  build.make.010.log.stderr  build.make.015.log.stderr  build.make.023.log.stderr
src/map/: CMakeLists.txt
src/map/launch/: generatePointCloud.launch
src/map/src/: generatePointCloud.cpp
src/traffic_light_detector_pkg/: CMakeLists.txt
src/traffic_light_detector_pkg/launch/: traffic_light_detector.launch
src/traffic_light_detector_pkg/src/: traffic_light_detector_node.cpp
version1(24072024)/config/: controller_params.yaml
version1(24072024)/src/: controller_node.cpp  velocity_publisher.cpp
version2(24072024)/config/: controller_params.yaml
version2(24072024)/src/: controller_node.cpp
version3/controller_pkg/: CMakeLists.txt
zibo20072024/controller_pkg/: CMakeLists.txt  controller.launch  controller_node.cpp  controller_params.yaml  velocity_publisher.cpp
(+1895 files in other folders)
